--- a/Kitchen-et-al.-larvae-temp-nutr.html
+++ b/Kitchen-et-al.-larvae-temp-nutr.html
@@ -10,9 +10,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Chris B Wall, with RM Kitchen, M Piscetta, M Rocha de Souza, EA Lenz, D Schar, RD Gates" />
+<meta name="author" content="Chris B Wall, with RM Kitchen, M Piscetta" />
 
-<meta name="date" content="2019-11-26" />
 
 <title>Temperature and nutrient effects on the larvae of three Hawaiian corals</title>
 
@@ -1576,12 +1575,13 @@ div.tocify {
 
 
 <h1 class="title toc-ignore">Temperature and nutrient effects on the larvae of three Hawaiian corals</h1>
-<h4 class="author">Chris B Wall, with RM Kitchen, M Piscetta, M Rocha de Souza, EA Lenz, D Schar, RD Gates</h4>
-<h4 class="date">11/26/2019</h4>
+<h4 class="author">Chris B Wall, with RM Kitchen, M Piscetta</h4>
+<h4 class="date">2/10/2020</h4>
 
 </div>
 
 
+<p><em>Kitchen RM, Piscetta M, Lenz EA, de Souza MR, Schar D, Gates RD, Wall CB. Symbiont transmission and reproductive mode influence responses of three Hawaiian coral larvae to elevated temperature and nutrients. (2020) Coral Reefs</em></p>
 <div id="synposis" class="section level2">
 <h2>Synposis</h2>
 <p>Corals are threatened by rising ocean temperatures and increased nutrient loading in coastal areas. The threats posed by elevated temperatures and nutrients for coral larvae – the early stages of the coral lifecycle – however are less certain, and the biology of corals in larval stages can differ considerably from that of adults. For instance, some species brood larvae with symbionts inherited from parents, others broadcast spawn egg-sperm bundles that receive endosymbionts from parents, while other egg-sperm bundles are aposymbontic and endosymbionts are obtained from the water column (i.e. horizontal transmittion).</p>
