--- a/Kitchen-et-al.-larvae-temp-nutr.html
+++ b/Kitchen-et-al.-larvae-temp-nutr.html
@@ -1582,8 +1582,8 @@ div.tocify {
 
 
 <p><em>Kitchen RM, Piscetta M, Lenz EA, de Souza MR, Schar D, Gates RD, Wall CB. Symbiont transmission and reproductive mode influence responses of three Hawaiian coral larvae to elevated temperature and nutrients. (2020) Coral Reefs</em></p>
-<div id="synposis" class="section level2">
-<h2>Synposis</h2>
+<div id="synopsis" class="section level2">
+<h2>Synopsis</h2>
 <p>Corals are threatened by rising ocean temperatures and increased nutrient loading in coastal areas. The threats posed by elevated temperatures and nutrients for coral larvae – the early stages of the coral lifecycle – however are less certain, and the biology of corals in larval stages can differ considerably from that of adults. For instance, some species brood larvae with symbionts inherited from parents, others broadcast spawn egg-sperm bundles that receive endosymbionts from parents, while other egg-sperm bundles are aposymbontic and endosymbionts are obtained from the water column (i.e. horizontal transmittion).</p>
 <p>The goal of this project was to understand how different temperature and nutrient concentrations affect the larvae of three Hawaiian reef coral taxa: <em>Lobactis scutaria</em> (broadcast spawner, aposymbiotic larvae), <em>Pocillopora acuta</em> (brooder, symbiotic larvae), and <em>Montipora capitata</em> (broadcast spawner, symbiotic larvae).</p>
 <center>
@@ -1594,8 +1594,8 @@ div.tocify {
 </center>
 <p>Temperature treatments oscillated with natural diel cycles at means of ca. 27°C and 29°C (<em>ambient and elevated temperatures</em>). Nutrient concentrations were elevated nitrate (5 μM NO<sub>3</sub><sup>-</sup>), elevated phosphate (1μM PO<sub>4</sub><sup>3-</sup>) and a combined elevated nitrate and phosphate treatment (+N+P). We evaluated effects of treatments after 4 or 5 days of exposure by assessing <em>(1) larval survivorship, (2) dark despiration rates, (3) symbiont cell densities, and (4) change in larval size.</em></p>
 </div>
-<div id="temperauture-treatments" class="section level2">
-<h2>Temperauture treatments</h2>
+<div id="temperature-treatments" class="section level2">
+<h2>Temperature treatments</h2>
 <p>Temperatures were variable according to natural cycles with <em>elevated temperature</em> (~29°C) at 1-2°C offset above ambient (~ 27°C).</p>
 <pre class="r"><code>#Upload temperature data
 temperature.data=read.csv(&quot;Data/temp data.csv&quot;)
@@ -1706,7 +1706,7 @@ plot_grid(temp.legend, c.temp.col, ncol=1, rel_heights = c(.2, 4))</code></pre>
 dev.off()</code></pre>
 </div>
 <div id="biological-responses" class="section level2">
-<h2>Biological Responses</h2>
+<h2>Biological responses</h2>
 <p>We measured larvae survivorship, dark respiration, symbiont densities, and change in size over the 4 or 5 day exposure to temperature-nutrient treatments.</p>
 <div id="survivorship" class="section level3">
 <h3>Survivorship</h3>
